# SensIO

./: CMakeLists.txt  Defines.h  README.md  TestBed.cpp  TestBed.h  main_receive.cpp  main_send.cpp  toolchain_osx.cmake
Attack/: AttackBase.h  AttackHelper.cpp  AttackHelper.h  ReadFlags.cpp  ReadFlags.h  ToggleSettings.cpp  ToggleSettings.h  UnusedRegisters.cpp  UnusedRegisters.h
PacketSystem/: Packet.cpp  Packet.h  PacketFactory.cpp  PacketFactory.h  PacketManager.cpp  PacketManager.h
PacketSystem/ECC/: ECC.h  Hadamard.cpp  Hadamard.h  NoECC.cpp  NoECC.h  Viterbi.cpp  Viterbi.h
PacketSystem/EDC/: Berger.cpp  Berger.h  EDC.h  NoEDC.cpp  NoEDC.h
Sensors/: HTS221.cpp  HTS221.h  HTS221Flags.cpp  HTS221Flags.h  LPS25H.cpp  LPS25H.h  LPS25HSettings.cpp  LPS25HSettings.h  LPS25HUnused.cpp  LPS25HUnused.h  Sensor.h  SensorBase.h
Sensors/HAL/: HAL.h  I2C_HAL.cpp  I2C_HAL.h  SPI_HAL.cpp  SPI_HAL.h
spdlog/: async_logger.h  common.h  formatter.h  logger.h  spdlog.h
spdlog/details/: async_log_helper.h  async_logger_impl.h  file_helper.h  log_msg.h  logger_impl.h  mpmc_bounded_q.h  os.h  pattern_formatter_impl.h  registry.h  spdlog_impl.h
spdlog/fmt/: fmt.h  ostr.h
spdlog/fmt/bundled/: format.h  ostream.cc  ostream.h  posix.h  printf.h  time.h
spdlog/sinks/: ansicolor_sink.h  base_sink.h  dist_sink.h  file_sinks.h  null_sink.h  ostream_sink.h  sink.h  stdout_sinks.h  wincolor_sink.h
